--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,13 @@ button:hover {
   text-decoration: none;
   color: antiquewhite;
   padding: 1rem;
+  transition: 1.5s;
+}
+
+.menu-item a:hover{
+  background-color: white;
+  color: black;
+  border-radius: 2rem;
 }
 
 /* Section1 */
